fixtures/vyper/simple/overflow/positive/u64-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "18446744073709551615"
#!           ],
#!           "caller": "0xB878b6ec5F9A9513Ce30EcfaD05ED50B70Ffb238"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: uint64) -> uint64:
    return witness + 1
